# zrest

./: CMakeLists.txt  INSTALL.txt  lance.bat  linux-setup.sh
glade/: zrest.glade
locale/linux/: addproject.csv  mainabout.csv  mainwindows.csv  requestmanager.csv
po/: zrestlang.pot
po/en/: zrestlang-en.po
po/fr/: zrestlang-fr.po
src/: main.cpp
src/darwin/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  MainWindowController.h  MainWindowController.mm  PanelExtension.h  PanelExtension.mm  cmake_install.cmake  main_darwin.h  main_darwin.mm
src/db/: CMakeLists.txt  auth.xml  db.cpp  db.hpp  zrestdb.cpp  zrestdb.hpp  zrestdb.xml
src/lang/: CMakeLists.txt  languages.cpp  languages.hpp
src/linux/: CMakeLists.txt  addproject.cpp  addproject.hpp  main_gnome.cpp  main_gnome.hpp  mainabout.cpp  mainabout.hpp  mainwindow.cpp  mainwindow.hpp  requestmanager.cpp  requestmanager.hpp
src/linux/utils/: CMakeLists.txt  misc.hpp  widgetlocale.cpp  widgetlocale.hpp
src/model/: CMakeLists.txt  projectrecord.cpp  projectrecord.hpp
src/utils/: CMakeLists.txt  log.cpp  log.hpp
src/win32/: CMakeLists.txt  addproject.cpp  addproject.hpp  instancewnd.hpp  main_win32.cpp  main_win32.hpp  mainwindow.cpp  mainwindow.hpp  requestmanager.cpp  requestmanager.hpp  resource.h  zrestres.rc
