add_library (zrestmodel projectrecord.cpp)
if(WIN32)
set(LTSINC "C:\\src\\litesql\\include")
endif()
if(UNIX)
set(LTSINC "~/src/litesql/include")
endif()
target_include_directories(zrestmodel PUBLIC "../db" ${LTSINC})
target_include_directories (zrestmodel PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

